[gd_scene load_steps=2 format=3 uid="uid://bupv8k2e1gxry"]

[ext_resource type="Script" path="res://scenes/ui/shops/screens/char_select.gd" id="1_char_select"]

[node name="CharSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char_select")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "WHO EQUIPS THIS?"
horizontal_alignment = 1

[node name="ItemInfo" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="ItemLabel" type="Label" parent="VBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "BRONZE SWORD"

[node name="PriceLabel" type="Label" parent="VBoxContainer/ItemInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.8, 0.2, 1)
text = "120G"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentArea" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="CharacterSection" type="VBoxContainer" parent="VBoxContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="CharacterLabel" type="Label" parent="VBoxContainer/ContentArea/CharacterSection"]
layout_mode = 2
text = "Party Members:"

[node name="CharacterGrid" type="GridContainer" parent="VBoxContainer/ContentArea/CharacterSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="CaravanButton" type="Button" parent="VBoxContainer/ContentArea/CharacterSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 16
text = "STORE IN CARAVAN"

[node name="StatComparisonPanel" type="PanelContainer" parent="VBoxContainer/ContentArea"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ContentArea/StatComparisonPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/ContentArea/StatComparisonPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ComparisonHeader" type="Label" parent="VBoxContainer/ContentArea/StatComparisonPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "STAT CHANGES:"

[node name="StatComparisonLabel" type="Label" parent="VBoxContainer/ContentArea/StatComparisonPanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "AT: +5"

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 36)
layout_mode = 2
focus_mode = 2
text = "BACK"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 36)
layout_mode = 2
focus_mode = 2
text = "CONFIRM"
